# SKAPP

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
SKAPI/: architecture.md  plan.md
SKAPI/LX/: setup.md  start_LX_arch.md  start_LX_debian.md
SKAPI/Other/: setup.md
SKAPI/Other/esphome/: native-api.md  readme.md
SKAPI/Other/homeassistant/: readme.md  rest-api.md
SKAPI/Other/http-generic/: readme.md  template.md
SKAPI/Other/hue/: bulb-control.md  groups-and-scenes.md  readme.md
SKAPI/Other/mqtt/: readme.md
SKAPI/Other/shelly/: 1pm.md  2.5.md  dali-dimmer.md  dimmer2.md  em.md  i3.md  plug-s.md  plus-i4.md  plus1pm.md  plus2pm.md  readme.md  rgbw2.md
SKAPI/Other/tuya/: readme.md
SKAPI/Other/wiz/: color-bulb.md  led-strip.md  plug.md  readme.md  white-bulb.md
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  key.properties.example
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/linux/: CMakeLists.txt
app/test/: skapi_madde_24_test.dart  widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/: 5xRelease.md  ANDROID_SIGNING.md  RELEASE_CHECKLIST.md
esp32/: CLI_REFERENCE.html  CLI_REFERENCE.md  COMMON_LOG_SPEC.md
esp32/BF/: .gitignore
esp32/LebensSpur/: .gitignore  DONUSUM_PLAN.md  LS_CLI_TEMPLATE.md  README.md  REFACTOR_PATCH_PHASE_A.md  TABLO_A_DOSYA_DEGISIKLIK.md  TABLO_B_CLI_KOMUTLARI.md  TABLO_C_EVENT_LISTESI.md  TABLO_D_APP_EKRAN_ESLEMESI.md
esp32/LebensSpur/HW/components/ext_flash/: CMakeLists.txt  ext_flash.c  idf_component.yml
esp32/LebensSpur/HW/components/ext_flash/include/: ext_flash.h
esp32/LebensSpur/HW/components/ls_cli/: CMakeLists.txt  ls_actions_cmds.c  ls_cli_registry.c  ls_device_cmds.c  ls_mail_cmds.c  ls_relay_cmds.c  ls_timer_cmds.c  ls_webhook_cmds.c
esp32/LebensSpur/HW/components/ls_cli/include/: ls_cli_registry.h
esp32/LebensSpur/HW/main/: CMakeLists.txt  main.c
esp32/skapp-library/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32/skapp-library/sk_core/: CMakeLists.txt  idf_component.yml
esp32/skapp-library/sk_core/include/: sk_auth.h  sk_baseline.h  sk_button.h  sk_capabilities.h  sk_cli.h  sk_core.h  sk_errors.h  sk_event_bus.h  sk_identity.h  sk_led.h  sk_mdns.h  sk_ota.h  sk_passphrase.h  sk_transport_ble.h  sk_transport_tcp.h  sk_transport_usb.h  sk_wifi.h
esp32/skapp-library/sk_core/private_include/: sk_cli_internal.h  sk_secure_session.h  sk_transport_ble_gatt.h
esp32/skapp-library/sk_core/src/: sk_auth.c  sk_auth_confirm.c  sk_auth_ecdh.c  sk_auth_handshake.c  sk_auth_hmac.c  sk_baseline.c  sk_button.c  sk_capabilities.c  sk_cli.c  sk_control.c  sk_core.c  sk_errors.c  sk_event_bus.c  sk_identity.c  sk_led.c  sk_mdns.c  sk_ota.c  sk_passphrase.c  sk_secure_session.c  sk_transport_ble.c  sk_transport_ble_gatt.c  sk_transport_tcp.c  sk_transport_usb.c  sk_wifi.c
md icerikleri/: Kurallar.md  LS_FAZ2_PLAN.md  LS_yapi.md  NEW_GUI_DESKTOP.md  apt_kurulum.md  bf_cli.md  güvenlik.md  hardening_kullanici_aksiyonlari.md  ls_cli.md  skill.md  tasarim.md  topluluk_script.md  uygulama_ozellikleri.md  yapilacaklar.md
scripts/: package_android.sh  package_linux.sh  package_macos.sh  package_windows.ps1
shared/: README.md  cli_contract.md
test/: kartd.html  ls.html  ls_gui_design2.html
tools/run/: README.md  wifi_install_android.bat  wifi_pair_android.bat  wifi_run_android.bat
tools/simulator/: README.md  simulator.py
(+495 files in other folders)
